# ICP-OnChain-Social-Starter

./: README.md  dfx.json
.dfx/local/: network-id
backend/: Cargo.toml  backend.did
backend/src/: lib.rs
frontend/: .env.local  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  agent.ts  index.css  main.tsx  types.ts
frontend/src/declarations/: backend.did.js
